<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.edu.ifspsaocarlos.sdm.gameshelper.NewMarkerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/players_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrementPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:onClick="onDecrementClick"/>

        <TextView
            android:id="@+id/playersNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:paddingRight="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/incrementPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:onClick="onIncrementClick"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/markerType"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/diceRadio"
                android:text="@string/diceRadio"
                android:checked="true"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timeMarkerRadio"
                android:text="@string/timeMarkerRadio"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/pointsMarker"
                android:text="@string/pointsRadio"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diceNumbers"/>

    <LinearLayout
        android:id="@+id/diceConfigLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/decrementDicesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:onClick="onDecrementClick"/>

        <TextView
            android:id="@+id/dicesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:paddingRight="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/incrementDicesNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:onClick="onIncrementClick"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diceFaces"/>

    <LinearLayout
        android:id="@+id/diceConfigLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrementDiceFaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/decrement"
            android:onClick="onDecrementClick"/>

        <TextView
            android:id="@+id/diceFaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:paddingRight="10dp"
            android:layout_marginRight="10dp"
            android:paddingLeft="10dp"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>

        <Button
            android:id="@+id/incrementDiceFaces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/increment"
            android:onClick="onIncrementClick"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/timeMarkerConfigLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">


    </LinearLayout>

    <LinearLayout
        android:id="@+id/pointsMarkerConfigLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="invisible">


    </LinearLayout>



</LinearLayout>
